# symcoro

./: CMakeLists.txt  README.md
include/symcoro/: symcoro.hpp
src/: symcoro.cpp
